Change title to just my name

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-cayman
-title: This is the title
+title: Dag Evensberget
 description: Space weather and astrophysics
 show_downloads: false  # This makes a 'download .zip button appear'
