--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-cayman
 title: Dag Evensberget
-description: Space weather and astrophysics
+description: Modelling exoplanetary space weather
 show_downloads: false  # This makes a 'download .zip button appear'
